updated some part user interface

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
         android:theme="@style/Theme.Signtrans">
         <activity
             android:name=".TranslatorActivity"
-            android:screenOrientation="fullSensor"
-            android:exported="false" />
+            android:exported="false"
+            />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
